# advent-of-code-rust

./: .gitignore  Cargo.toml  boilerplate.rs
registry/: Cargo.toml
registry/src/: lib.rs
script/: new-day
src/: curday.rs  download.rs  input.rs  main.rs  registry.rs  solutionset.rs  solver.rs  test.rs  token.rs  years.rs
src/years/: y2021.rs  y2022.rs  y2023.rs
src/years/y2021/: d02.rs  d1.rs
src/years/y2022/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/years/y2023/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d23.rs  d24.rs  d25.rs
