[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
hex = "*"
platform-dirs = "*"
reqwest = { version = "*", features = ["blocking"] }
