[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-of-code-registry = { path = "registry" }
anyhow = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
hex = "*"
itertools = "*"
num = "*"
platform-dirs = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking"] }
