[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

[profile.dev0]
inherits = "dev"

[profile.rel1]
inherits = "release"
lto = "fat"

[profile.rel2]
inherits = "release"
opt-level = 3

[profile.rel3]
inherits = "release"
codegen-units = 1

[profile.relall]
inherits = "release"
lto = "fat"
opt-level = 3
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-of-code-registry = { path = "registry" }
anyhow = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
hex = "*"
itertools = "*"
num = "*"
platform-dirs = "*"
rand = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking"] }
